fix sidebar scrollbar bug

--- a/plugins/teedoc-plugin-theme-default/teedoc_plugin_theme_default/assets/light.css
+++ b/plugins/teedoc-plugin-theme-default/teedoc_plugin_theme_default/assets/light.css
@@ -325,6 +325,7 @@ pre[class*="language-"].line-numbers > code {
     display: block;
     padding-bottom: 3em;
     margin: 0;
+    overflow-y: auto;
 }
 #sidebar ul .show{
     /* display: block; */ /* js instead, just reserve this item*/
